# docs/swagger.json
@@ -768,12 +768,6 @@
         "models.Cizzor": {
             "type": "object",
             "properties": {
-                "click_sources": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.ClickSource"
-                    }
-                },
                 "count": {
                     "type": "integer"
                 },
